Fixed extra padding when there is more than one p in the copyright section and when there are no blocks in the footer.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -335,8 +335,15 @@ body {
 
 /* COPYRIGHT NOTICE */
 
+#__copyright p:first-child {
+	padding-top: 24px;
+}
+
+#__copyright:first-child p:first-child {
+	padding-top: 24px;
+}
+
 #__copyright p {
-    padding-top: 24px;
     text-align: center;
 }
 
